2000-06-28-23:20 Luiz Rafael Culik <culik@sl.conex.net>
*contrib/hbzlib/zipfile2.c
   -hb___MyMkdir() Functions. All Calls to this function replaced with hb_fsMkDir()
   *some bugs fixed
*contrib/hbzlib/hbzip.h
   -removed hb___MyMkdir() function declaration

2000-06-27 11:10 UTC+0100 Ryszard Glab <rglab@imid.med.pl>
    
    *include/hbapi.h
    *source/rtl/errorapi.c
    *source/rtl/idle.c
    *source/vm/classes.c
    *source/vm/garbage.c
        *the garbage collector is now aware of all items stored internally 
        in class related structures


2000-06-27-22:45 Luiz Rafael Culik <culik@sl.conex.net>
  *Changelog
     *Renamed to ChangeLog.008 and Started a new one
  *contrib/hbzlib/zipfile2.c
   contrib/hbzlib/zlibapi.c
     *Added code to be used by other platforms
  +contrib/hbzlib/makefile
     *makefile for gnu compiler
   * source/pp/pragma.c
   * contrib/dot/pp_harb.ch
   * tests/inline_c.prg
     * STOPDUMP renamed as ENDDUMP (with Ron permission)

2001-12-21 08:40 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
   * utils/hbmake/hbmake.prg
    * small fix

2001-12-21 07:50 UTC-0300 Luiz Rafael Culik <culik@sl.conex.net>
  * source/rtl/filesys.c
    * hb_fsmkdir,hb_fsChdir,hb_fsRmdir,hb_fsDelete,hb_fsRename,hb_fsCurdirBuff()
      now use Win32 API calls
   * utils/hbmake/hbmake.prg
     ! Disabled profile
   * utils/hbmake/hbmutils.prg
     * An small clean up
   * ChangeLog
     * Renamed to ChangeLog.012 and started an new one
2006-02-15 13:50 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * harbour/source/vm/hvm.c
    ! fixed memory leak I introduced changing Ryszard modifications

      need such functionality yet
  + harbour/ChangeLog.015
  * harbour/source/vm/debug.c

  * harbour/harbour.spec
  * harbour/bin/hb-func.sh
    * some modification in xhb* scripts building - adding passing
      predefined compiler and linker switches
  * harbour/source/vm/hvm.c
    * minor code cleanup
