@@ -1,3 +1,13 @@
+2000-06-29 10:50 UTC+0100 Ryszard Glab <rglab@imid.med.pl>
+
+    *source/vm/classes.c
+        *fixed to stop handling of the garbage collector requests
+        (hb_clsIsClassRef()) after all classes were released 
+        
+    *source/rtl/setkey.c
+        *fixed to lock codeblocks stored internally to prevent deallocation
+        by the garbage collector
+
 2000-06-28-23:20 Luiz Rafael Culik <culik@sl.conex.net>
 *contrib/hbzlib/zipfile2.c
    -hb___MyMkdir() Functions. All Calls to this function replaced with hb_fsMkDir()
